--- a/index.html
+++ b/index.html
@@ -3,11 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
-        Hello World
-    </h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#logo">My Logo</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <section id="Logo">
+        <div class="logo">
+
+        </div>
+    </section>
+
+    <section id="portfolio">
+        <div class="container">
+            <h1 style="font-size:10vw"> 
+                I'm Arslan  Glad to see you!
+            </h1>
+
+            <div class="Descripton">
+               
+                <p2 style="font-size:5vw ">
+                    I am a software developer.I can help u build a product, feature or a website. Look through some of my work and experience! 
+                    if you like what you see and have a project you need to be coded, dont hesitate to contatct me
+                </p2>
+            </div>
+<img src="/https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Fpremium-vector%2Fwhite-elegant-blue-background_32121147.htm&psig=AOvVaw39cy3JHURcWMRrsqtH8EZ-&ust=1696258842597000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNiIpuCO1YEDFQAAAAAdAAAAABAJ" alt="BACKGROUND ">       
+    </section>
+
+
+<section id="buttons">
+        <div class="buttons">
+            <button type="button">linked in </button>
+            <button type="button" > github</button>
+        </div>
+
+
+
+
+ 
 </body>
 </html>
